implementato tasto Next/Dettails

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
         <div class="container d-flex justify-content-center">
             <div class="row" id="container">
             </div>
+            <div id="booksDettails">
+
+            </div>
         </div>
+
     </main>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
